docker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app
    spec:
      containers:
        - image: 908912345/microservice-stud:v1
          name: docker-app-v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 7
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
