docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-service
spec:
  selector:
      app: docker-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
  type: NodePort
